--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Times New Roman', sans-serif;
-  background: linear-gradient(to right, #1c3f5f, #0a1621);
+  background: linear-gradient(to right, #373B44, #4286f4);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -116,4 +116,5 @@ select option {
 .result h2 {
   color: #5c9bf8;
 }
+
 
